unpackaged/main/default/objects/NF_Contacts_Completed__c/NF_Contacts_Completed__c.object-meta.xml
<CustomObject>
    <label>Contacts Completed</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Contacts Completed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts Completed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>