unpackaged/main/default/objects/NF_Contacts_Completed__c/fields/Abandoned__c.field-meta.xml
<CustomField>
    <fullName>Abandoned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abandoned</label>
    <type>Checkbox</type>
</CustomField>