unpackaged/main/default/objects/NF_Contacts_Completed__c/fields/AbandonSeconds__c.field-meta.xml
<CustomField>
    <fullName>AbandonSeconds__c</fullName>
    <label>AbandonSeconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>