unpackaged/main/default/objects/NF_Contacts_Completed__c/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <label>AgentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>