unpackaged/main/default/objects/NF_Contacts_Completed__c/fields/InQueueSeconds__c.field-meta.xml
<CustomField>
    <fullName>InQueueSeconds__c</fullName>
    <label>InQueueSeconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>