unpackaged/main/default/objects/NF_Contacts_Completed__c/fields/IsShortAbandon__c.field-meta.xml
<CustomField>
    <fullName>IsShortAbandon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsShortAbandon</label>
    <type>Checkbox</type>
</CustomField>