unpackaged/main/default/objects/NF_Contacts_Completed__c/fields/PreQueueSeconds__c.field-meta.xml
<CustomField>
    <fullName>PreQueueSeconds__c</fullName>
    <label>PreQueueSeconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>