unpackaged/main/default/objects/NF_Contacts_Completed__c/fields/RefuseReason__c.field-meta.xml
<CustomField>
    <fullName>RefuseReason__c</fullName>
    <label>RefuseReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>