unpackaged/main/default/objects/NF_Contacts_Completed__c/fields/SkillId__c.field-meta.xml
<CustomField>
    <fullName>SkillId__c</fullName>
    <label>SkillId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>