unpackaged/main/default/objects/NF_Contacts_Completed__c/fields/TotalDurationSeconds__c.field-meta.xml
<CustomField>
    <fullName>TotalDurationSeconds__c</fullName>
    <label>TotalDurationSeconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>