unpackaged/main/default/objects/NF_Contacts_Completed__c/fields/TransferIndicatorId__c.field-meta.xml
<CustomField>
    <fullName>TransferIndicatorId__c</fullName>
    <label>TransferIndicatorId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>